<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".excRate">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/inputRMB"
        android:inputType="textPersonName"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:text="TextView"
        tools:text="@string/HELLO"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginVertical="16dp"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DOLLAR"
        android:textSize="30sp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EURO"
        android:textSize="30sp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WON"
        android:textSize="30sp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onClick"
        android:textSize="30sp"
        android:text="@string/EDIT"
        />
</LinearLayout>