<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".exchange">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/newRatio"
        android:inputType="textPersonName"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginVertical="16dp"
        android:text="@string/DOLLAR"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onClick"
         />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onClick"
        android:text="@string/EURO" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="onClick"
        android:text="@string/WON" />
</LinearLayout>